--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is your new Play 2.1 application
-=====================================
+Rovachan
+========
 
-This file will be packaged with your application, when using `play dist`.
+Chan Board scraper developed using Scala 2.10, Play 2.1 and Akka 2
